--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "dependencies": {
     "@okta/okta-auth-js": "^7.5.1",
     "@okta/okta-react": "^6.8.0",
+    "@stripe/react-stripe-js": "^2.7.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-razorpay": "^2.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "stripe": "^15.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
